syntax = "proto3";

package user;

service UserService {
    rpc CreateUser(User) returns (CreateResponse) {}
    rpc GetUser(GetRequest) returns (GetResponse) {}
}

message User {
    string userID = 1;
    string firstName = 2;
    string lastName = 3;
    string dob = 4;
    string gender = 5;
    string university = 6;
    Accounts accounts = 7;
}

message Accounts {
    repeated string accountID = 1;
}

// Create response

message CreateResponse {
    bool created = 1;
    User user = 2;
}

// Get request and response

message GetRequest {
    string id = 1;
}

message GetResponse {
    repeated User users = 1;
}